--- a/kcc/Makefile
+++ b/kcc/Makefile
@@ -1,9 +1,9 @@
-CFLAGS=-std=c11 -g -static
+CFLAGS=-std=c11 -g -static -fno-common
 SRCS=$(wildcard *.c)
 OBJS=$(SRCS:.c=.o)
 
 kcc: $(OBJS)
-				$(CC) -o kcc $(OBJS) $(LDFLAGS)
+				$(CC) -o $@ $(OBJS) $(LDFLAGS)
 
 $(OBJS): kcc.h
 
